--- a/index.html
+++ b/index.html
@@ -15,18 +15,26 @@
     <!--Hero Section, if I have one-->
     <article>
     <h2>Hook Title</h2>
-    <p>This is where my hook will go</p>
+    <p>There is a vulnerability of people who live in rural settings, especially those without access to prompt medical response during emergency traumas. The rise in mass gun violence, natural disasters, and a national shortage of EMTs and paramedics, only exacerbates this problem.
+        <p>In the United States, hemorrhage is responsible for 30 to 40% of trauma mortality, and of these deaths, 33 to 56% occur during the prehospital period.</p>
+        <p><em>This project is a response to that vulnerability.</em></p>
+        <p>STEPS is a visualization focused on empowering untrained people to respond to emergency traumas through dynamic design and research based solutions.</p>
     </article>
 <!--Hero Section End, if I have one-->
 <section>
-    <h2>The Problem</h2>
+    <h2>A locally inspired response to a national problem…</h2>
+    <p>Clatsop County, Oregon is a picturesque corner of the Pacific Northwest. With a population of over 40,000 full time residents and covering 1,084 square miles, it is home to the cities of Seaside and Astoria. Both of which rely heavily on tourism for their local economies. Astoria alone hosts 125,000 tourists annually. With this many citizens and visitors spread out over such a large area, there are only two 25 bed local hospitals to render aid in the case of an emergency. That is only 1 hospital bed per 836 residents. The lack of resources is only compounded by its geographic isolation. Many patients end up needing to be evacuated to Portland for more extensive treatment.</p>    
+    <p>These realities coupled with the rise in mass shootings and prevalence of natural disasters has created circumstances that may need to be addressed before professional care can be offered. It takes an average of 7-10 minutes for first responders to reach the scene of an emergency, but someone who has severe trauma can bleed out in as little as 5 minutes.</p>    
+    <p>STEPS stands for Severe Trauma & Emergency Protocol System. It is meant to give untrained bystanders the ability to provide first aid to a victim in those crucial moments before help arrives. 
+        </p>
     <p>Statement and research will go here. Possibly with <a href="#!">Links</a></p>
 </section>
 
     <section>
-        <h2>The Opportunity</h2>
-        <p>My research findings will go here. <a href="#!">Maybe with a link to the research/survey/fancy graphs so that I don't bore people who don't care about it.</a></p>
-        <p>This is probably where I would introduce Stop the Bleed. <a href="#!">Again with links to their respective organizations</a></p>
+        <h2>Finding a baseline and researching opportunities</h2>
+        <p>As a high school teacher, I used my classroom to explore the abilities and predispositions of my students and fellow faculty. There were limitations to what I was able to do, but I was still able to draw some significant conclusions. I found that the vast majority had cell phones, internet access, and would look up what to do online, but many of them did not know how to react in a crisis after calling 911. Additionally, a small group of students were asked to participate in a role-playing exercise where they needed to give first aid. While each of them dressed the wound, they were more concerned with cleaning it, rather than stopping the “bleeding”.  <a href="#!">You can see the breakdown of these results in my research </a></p>
+        <p>The question of how to prepare people for these situations is not a new one. There are other organizations who have developed first aid training programs for the general public. Stop The Bleed was created as a civilian response to trauma using military tourniquet training and research. This life-saving training was developed by the Departments of Defense and Home Security, and the American College of Surgeons. Stop The Bleed training has had over 130,000 courses and taught 2.4 million participants what to do in case of an emergency. It has pursued legislative action to put its bleeding control kits into public spaces alongside Automated External Defibrillators since its inception in 2017. The Red Cross has partnered with Stop the Bleed and developed a curriculum that was specifically created for high school students FAST (First Aid for Severe Trauma) makes its digital resources available for anyone under the age of 19 for free.  <a href="#!">Again with links to their respective organizations</a></p>
+        <p>As noble as both of these organizations are, their usefulness in an emergency requires a person to be trained beforehand. <em>They are proactive, not reactive.</em> Until their impact becomes so widespread that it is common knowledge, there is an opportunity to create something to help people in the moment, during a crisis. </p>
     </section>
 
     <section>
