Updated text with Accessibility list

--- a/index.html
+++ b/index.html
@@ -40,9 +40,16 @@
     <section>
         <h2>Finding the best answer to a terrible question</h2>
         <h3>Pulling it all together</h3>
-        <p>A discussion about how I'm approaching things</p>
-        <h3>Deliverables</h3>
-        <p>A fancy embed of a figma prototype maybe? Or i could figure out how to add a .pdf with the instructions I made.... Or a photo of them?</p>
+        <p>Because of our global advancements in technology and the expansive reach of the internet, there is an opportunity to create immediate access to life-saving information. With the use of a diagnostic app or website, even if they have had no first aid training at all, individuals can render aid. If it is tied to a QR code and prominently displayed on a first aid kit, in a crisis, bystanders can start treatment before first responders arrive.
+            At this point STEPS is presented as a mobile-responsive website prototype alongside a QR code printed on a placard. In case the user has no internet access, there are instructions for how to apply a tourniquet inside the placard. The images and instructions come directly from a Stop The Bleed poster that was produced by the Department of Homeland Security with edits for brevity and clarity. This project is only meant to be the foundational underpinnings of a larger undertaking. </p>
+        <h3>Questions of Accessibility</h3>
+        <p>Just because the technology to create such a system is available does not mean that we all have equal access to it. Our own individual circumstances frame how we interact with technology and the world as a whole. In an emergency, there are different factors that should be considered to make sure that this resource can reach the widest possible demographic.</p>
+        <ul>
+            <li><h4>A Simple Color Scheme:</h4> The lack of distraction will allow the user to focus on the task at hand as much as possible. Contrasting colors will allow users with visual disabilities to more easily understand graphics and read text.</li>
+            <li><h4>Clear, Concise Text:</h4> 130 million American adults lack a basic reading proficiency, reading at or less than a 6th grade level. Somewhere between 5 and 15% of the American population (or between 14.5 and 43.5 million people) suffer from dyslexia. Instructions should be written with simple language in a readable, ADA compliant typeface.</li>
+            <li><h4>Visual Cues and Pictograms:</h4> By adding illustrations wherever possible, the communication of instruction can increase the access of vulnerable populations. Additionally, because 1 in 5 Americans speak a language other than English at home, any difficulties with limited vocabulary can be visually reinforced.</li>
+            <li><h4>Large Interactive Icons and Buttons:</h4> While this would help anyone with motor skill limitations, it also respects the stress and anxiety that emergency situations can cause. It is intended to make navigation easier for anyone who needs to use this resource.</li>
+        </ul>
     </section>
     
     <section>
