--- a/index.html
+++ b/index.html
@@ -3,45 +3,55 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>STEPS</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <title>STEPS Brian Vollner MCAD Capstone: Summer 2023</title>
 </head>
 <body>
     <!--Header Start-->
-    <header>
-        <h1>I'm a Logo</h1>
+    <header class="header">
+        <div class="header_container">
+        <h1><img class="h1_img" src="img/STEPSwordmarkWhite.png" alt="White STEPS wordmark" </h1>
         <nav>I'm eventually going to be links</nav>
+        </div>
     </header>
     <!--Header End-->
     <!--Hero Section, if I have one-->
-    <article>
+    <div class="container">
+    <section>
+        <div class="section_container">
     <h2>Hook Title</h2>
-    <p>There is a vulnerability of people who live in rural settings, especially those without access to prompt medical response during emergency traumas. The rise in mass gun violence, natural disasters, and a national shortage of EMTs and paramedics, only exacerbates this problem.
-        <p>In the United States, hemorrhage is responsible for 30 to 40% of trauma mortality, and of these deaths, 33 to 56% occur during the prehospital period.</p>
+    <p class="hook_text">There is a vulnerability of people who live in rural settings, especially those without access to prompt medical response during emergency traumas. The rise in mass gun violence, natural disasters, and a national shortage of EMTs and paramedics, only exacerbates this problem.
+        <p  class="hook_text">In the United States, hemorrhage is responsible for 30 to 40% of trauma mortality, and of these deaths, 33 to 56% occur during the prehospital period.</p>
         <p><em>This project is a response to that vulnerability.</em></p>
-        <p>STEPS is a visualization focused on empowering untrained people to respond to emergency traumas through dynamic design and research based solutions.</p>
-    </article>
+        <p  class="hook_text">STEPS is a visualization focused on empowering untrained people to respond to emergency traumas through dynamic design and research based solutions.</p>
+</div>
+    </section>
 <!--Hero Section End, if I have one-->
 <section>
+    <div class="section_container">
     <h2>A locally inspired response to a national problem…</h2>
     <p>Clatsop County, Oregon is a picturesque corner of the Pacific Northwest. With a population of over 40,000 full time residents and covering 1,084 square miles, it is home to the cities of Seaside and Astoria. Both of which rely heavily on tourism for their local economies. Astoria alone hosts 125,000 tourists annually. With this many citizens and visitors spread out over such a large area, there are only two 25 bed local hospitals to render aid in the case of an emergency. That is only 1 hospital bed per 836 residents. The lack of resources is only compounded by its geographic isolation. Many patients end up needing to be evacuated to Portland for more extensive treatment.</p>    
     <p>These realities coupled with the rise in mass shootings and prevalence of natural disasters has created circumstances that may need to be addressed before professional care can be offered. It takes an average of 7-10 minutes for first responders to reach the scene of an emergency, but someone who has severe trauma can bleed out in as little as 5 minutes.</p>    
     <p>STEPS stands for Severe Trauma & Emergency Protocol System. It is meant to give untrained bystanders the ability to provide first aid to a victim in those crucial moments before help arrives. 
         </p>
     <p>Statement and research will go here. Possibly with <a href="#!">Links</a></p>
+    </div>
 </section>
 
     <section>
+        <div class="section_container">
         <h2>Finding a baseline and researching opportunities</h2>
         <p>As a high school teacher, I used my classroom to explore the abilities and predispositions of my students and fellow faculty. There were limitations to what I was able to do, but I was still able to draw some significant conclusions. I found that the vast majority had cell phones, internet access, and would look up what to do online, but many of them did not know how to react in a crisis after calling 911. Additionally, a small group of students were asked to participate in a role-playing exercise where they needed to give first aid. While each of them dressed the wound, they were more concerned with cleaning it, rather than stopping the “bleeding”.  <a href="#!">You can see the breakdown of these results in my research </a></p>
         <p>The question of how to prepare people for these situations is not a new one. There are other organizations who have developed first aid training programs for the general public. Stop The Bleed was created as a civilian response to trauma using military tourniquet training and research. This life-saving training was developed by the Departments of Defense and Home Security, and the American College of Surgeons. Stop The Bleed training has had over 130,000 courses and taught 2.4 million participants what to do in case of an emergency. It has pursued legislative action to put its bleeding control kits into public spaces alongside Automated External Defibrillators since its inception in 2017. The Red Cross has partnered with Stop the Bleed and developed a curriculum that was specifically created for high school students FAST (First Aid for Severe Trauma) makes its digital resources available for anyone under the age of 19 for free.  <a href="#!">Again with links to their respective organizations</a></p>
         <p>As noble as both of these organizations are, their usefulness in an emergency requires a person to be trained beforehand. <em>They are proactive, not reactive.</em> Until their impact becomes so widespread that it is common knowledge, there is an opportunity to create something to help people in the moment, during a crisis. </p>
+        </div>
     </section>
 
-    <section>
+    <section><div class="section_container">
         <h2>Finding the best answer to a terrible question</h2>
-        <h3>Pulling it all together</h3>
-        <p>Because of our global advancements in technology and the expansive reach of the internet, there is an opportunity to create immediate access to life-saving information. With the use of a diagnostic app or website, even if they have had no first aid training at all, individuals can render aid. If it is tied to a QR code and prominently displayed on a first aid kit, in a crisis, bystanders can start treatment before first responders arrive.
-            At this point STEPS is presented as a mobile-responsive website prototype alongside a QR code printed on a placard. In case the user has no internet access, there are instructions for how to apply a tourniquet inside the placard. The images and instructions come directly from a Stop The Bleed poster that was produced by the Department of Homeland Security with edits for brevity and clarity. This project is only meant to be the foundational underpinnings of a larger undertaking. </p>
         <h3>Questions of Accessibility</h3>
         <p>Just because the technology to create such a system is available does not mean that we all have equal access to it. Our own individual circumstances frame how we interact with technology and the world as a whole. In an emergency, there are different factors that should be considered to make sure that this resource can reach the widest possible demographic.</p>
         <ul>
@@ -50,11 +60,11 @@
             <li><h4>Visual Cues and Pictograms:</h4> By adding illustrations wherever possible, the communication of instruction can increase the access of vulnerable populations. Additionally, because 1 in 5 Americans speak a language other than English at home, any difficulties with limited vocabulary can be visually reinforced.</li>
             <li><h4>Large Interactive Icons and Buttons:</h4> While this would help anyone with motor skill limitations, it also respects the stress and anxiety that emergency situations can cause. It is intended to make navigation easier for anyone who needs to use this resource.</li>
         </ul>
-    </section>
-    
-    <section>
-        <h2>In summation</h2>
-        <p>Dropping in my final nuggets of protean genius</p>
-    </section>
+        <h3>Pulling it all together</h3>
+        <p>Because of our global advancements in technology and the expansive reach of the internet, there is an opportunity to create immediate access to life-saving information. With the use of a diagnostic app or website, even if they have had no first aid training at all, individuals can render aid. If it is tied to a QR code and prominently displayed on a first aid kit, in a crisis, bystanders can start treatment before first responders arrive.
+            At this point STEPS is presented as a mobile-responsive website prototype alongside a QR code printed on a placard. In case the user has no internet access, there are instructions for how to apply a tourniquet inside the placard. The images and instructions come directly from a Stop The Bleed poster that was produced by the Department of Homeland Security with edits for brevity and clarity. This project is only meant to be the foundational underpinnings of a larger undertaking. </p>
+        </div>
+        </section>
+</div>
 </body>
 </html>
