--- a/index.html
+++ b/index.html
@@ -11,25 +11,30 @@
 </head>
 <body>
     <!--Header Start-->
-    <header class="header">
+    <header>
         <div class="header_container">
-        <h1><img class="h1_img" src="img/STEPSwordmarkWhite.png" alt="White STEPS wordmark" </h1>
-        <nav>I'm eventually going to be links</nav>
+        <nav><ul class="nav">
+            <li class="nav_list">RESEARCH</li>
+            <li class="nav_list">SOURCES</li>
+            <li class="nav_list">BLOG</li>
+        </ul></nav>
         </div>
     </header>
     <!--Header End-->
     <!--Hero Section, if I have one-->
-    <div class="container">
-    <section>
-        <div class="section_container">
-    <h2>Hook Title</h2>
-    <p class="hook_text">There is a vulnerability of people who live in rural settings, especially those without access to prompt medical response during emergency traumas. The rise in mass gun violence, natural disasters, and a national shortage of EMTs and paramedics, only exacerbates this problem.
-        <p  class="hook_text">In the United States, hemorrhage is responsible for 30 to 40% of trauma mortality, and of these deaths, 33 to 56% occur during the prehospital period.</p>
-        <p><em>This project is a response to that vulnerability.</em></p>
-        <p  class="hook_text">STEPS is a visualization focused on empowering untrained people to respond to emergency traumas through dynamic design and research based solutions.</p>
-</div>
+    <section id="hero_section">
+        <div class="hero_container">
+            <h1><img class="h1_img" src="img/STEPSwordmarkWhite.png" alt="White STEPS wordmark"></h1>
+        <div id="hook_text_div">
+        <p class="hook_text">There is a vulnerability of people who live in rural settings, especially those without access to prompt medical response during emergency traumas. The rise in mass gun violence, natural disasters, and a national shortage of EMTs and paramedics, only exacerbates this problem.
+        <p class="hook_text">In the United States, hemorrhage is responsible for 30 to 40% of trauma mortality, and of these deaths, 33 to 56% occur during the prehospital period.</p>
+        <p class="hook_text"><em>This project is a response to that vulnerability.</em></p>
+        <p class="hook_text">STEPS is a visualization focused on empowering untrained people to respond to emergency traumas through dynamic design and research based solutions.</p>
+        </div>
+    </div>
     </section>
 <!--Hero Section End, if I have one-->
+<div class="container">
 <section>
     <div class="section_container">
     <h2>A locally inspired response to a national problem…</h2>
@@ -65,6 +70,7 @@
             At this point STEPS is presented as a mobile-responsive website prototype alongside a QR code printed on a placard. In case the user has no internet access, there are instructions for how to apply a tourniquet inside the placard. The images and instructions come directly from a Stop The Bleed poster that was produced by the Department of Homeland Security with edits for brevity and clarity. This project is only meant to be the foundational underpinnings of a larger undertaking. </p>
         </div>
         </section>
+</div>
 </div>
 </body>
 </html>
