Images and refined CSS

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <header>
         <div class="header_container">
         <nav><ul class="nav">
-            <li class="nav_list"><a href="doc/bvollner_researchPlan.pdf" alt="Research Plan">RESEARCH</a></li>
-            <li class="nav_list"><a href="doc/STEPS_citations.pdf" alt="Citations">CITATIONS</a></li>
-            <li class="nav_list">BLOG</li>
+            <li class="nav_list"><a class="nav" href="doc/bvollner_researchPlan.pdf" alt="Research Plan">RESEARCH</a></li>
+            <li class="nav_list"><a class="nav" href="doc/STEPS_citations.pdf" alt="Citations">CITATIONS</a></li>
+            <li class="nav_list"><a class="nav" href="https://vollnerb.wixsite.com/capstoneprogress">BLOG</a></li>
         </ul></nav>
         </div>
     </header>
@@ -24,40 +24,58 @@
     <!--Hero Section, if I have one-->
     <section id="hero_section">
         <div class="hero_container">
-            <h1><img class="h1_img" src="img/STEPSwordmarkWhite.png" alt="White STEPS wordmark"></h1>
-        <div id="hook_text_div">
+            <h1><img id="h1_img" src="img/STEPSwordmarkWhite.png" alt="White STEPS wordmark"></h1>
+        
+        <div id="hook_text_div">  
         <p class="hook_text">There is a vulnerability of people who live in rural settings, especially those without access to prompt medical response during emergency traumas. The rise in mass gun violence, natural disasters, and a national shortage of EMTs and paramedics, only exacerbates this problem.
         <p class="hook_text">In the United States, hemorrhage is responsible for 30 to 40% of trauma mortality, and of these deaths, 33 to 56% occur during the prehospital period.<sup>1</sup></p>
         <p class="hook_text"><em>This project is a response to that vulnerability.</em></p>
-        <p class="hook_text">STEPS is a visualization focused on empowering untrained people to respond to emergency traumas through dynamic design and research based solutions.</p>
-        </div>
+        <p class="hook_text">STEPS is a visualization focused on empowering untrained people to respond to emergency traumas through dynamic design and research based solutions.</p>  
+    </div>
     </div>
     </section>
 <!--Hero Section End, if I have one-->
 <div class="container">
 <section>
-    <div class="section_container">
+    <div class="clatsop_section_container">
+        <div class="clatsop_images">
+    <figure>
+    <img id="column_view" src="img/column_view.JPG" alt="View from the Astoria Column">
+    <figcaption>A view of Astoria, OR overlooking the Columbia River</figcaption>
+</figure>
+    <figure>
+    <img src="img/clatsop_map.png" alt="Map of Clatsop County">
+    <figcaption>Figure 1. A map of Clatsop County</figcaption>
+    </figure>
+</div>
+    <div class="clatsop_text_div">
     <h2>A locally inspired response to a national problem…</h2>
-    <p>Clatsop County, Oregon is a picturesque corner of the Pacific Northwest. With a population of over 40,000 full time residents and covering 828 square miles of land<sup>2</sup>, it is home to the cities of Seaside and Astoria. Both of which rely heavily on tourism for their local economies. Astoria alone hosts 125,000 tourists annually.<sup>3</sup>  With this many citizens and visitors spread out over such a large area, there are only two 25 bed local hospitals to render aid in the case of an emergency. That is only 1 hospital bed per 836 residents. The lack of resources is only compounded by its geographic isolation. Many patients end up needing to be evacuated to Portland for more extensive treatment.</p>    
+    <p>Clatsop County, Oregon is a picturesque corner of the Pacific Northwest. With a population of over 40,000 full time residents and covering 828 square miles of land<sup>2</sup>. As figure 1 shows, it is home to the cities of Seaside and Astoria. Both of which rely heavily on tourism for their local economies. Astoria alone hosts 125,000 tourists annually.<sup>3</sup>  With this many citizens and visitors spread out over such a large area, there are only two 25 bed local hospitals <em>(fig. 1, locations circled by the author)</em> to render aid in the case of an emergency. That is only 1 hospital bed per 836 residents. The lack of resources is only compounded by its geographic isolation. Many patients end up needing to be evacuated to Portland for more extensive treatment.</p>    
     <p>These realities coupled with the rise in mass shootings and prevalence of natural disasters has created circumstances that may need to be addressed before professional care can be offered. It takes an average of 7-10 minutes for first responders to reach the scene of an emergency, but someone who has severe trauma can bleed out in as little as 5 minutes.<sup>4</sup></p>    
     <p>STEPS stands for Severe Trauma & Emergency Protocol System. It is meant to give untrained bystanders the ability to provide first aid to a victim in those crucial moments before help arrives. 
         </p>
+    </div>
     </div>
 </section>
 
     <section>
         <div class="section_container">
         <h2>Finding a baseline and researching opportunities</h2>
-        <p>The question of how to prepare people for these situations is not a new one. There are other organizations who have developed first aid training programs for the general public. Stop The Bleed was created as a civilian response to trauma using military tourniquet training and research. This life-saving training was developed by the Departments of Defense and Homeland Security, and the American College of Surgeons.<sup>5</sup> Stop The Bleed training has had over 130,000 courses and taught 2.4 million participants what to do in case of an emergency.<sup>6</sup> It has pursued legislative action to put its bleeding control kits into public spaces alongside Automated External Defibrillators since its inception in 2017.<sup>7</sup> The Red Cross has partnered with Stop the Bleed and developed a curriculum that was specifically created for high school students. FAST (First Aid for Severe Trauma) makes its digital resources available for anyone under the age of 19 for free.<sup>8</sup>  <a href="#!">Again with links to their respective organizations</a></p>
+        
+        <p>The question of how to prepare people for these situations is not a new one. There are other organizations who have developed first aid training programs for the general public. Stop The Bleed was created as a civilian response to trauma using military tourniquet training and research. This life-saving training was developed by the Departments of Defense and Homeland Security, and the American College of Surgeons.<sup>5</sup> Stop The Bleed training has had over 130,000 courses and taught 2.4 million participants what to do in case of an emergency.<sup>6</sup> It has pursued legislative action to put its bleeding control kits into public spaces alongside Automated External Defibrillators since its inception in 2017.<sup>7</sup> The Red Cross has partnered with Stop the Bleed and developed a curriculum that was specifically created for high school students. FAST <a href="https://www.redcross.org/take-a-class/first-aid/first-aid-training/first-aid-classes/fast-training">(First Aid for Severe Trauma)</a> makes its digital resources available for anyone under the age of 19 for free.<sup>8</sup>  <a href="#!">Again with links to their respective organizations</a></p>
+        <figure id="stb_logo">
+        <img src="img/logo_stopthebleed.jpg" alt="Stop The Bleed Logo">
+        <figcaption>Figure 2. Stop The Bleed's logo</figcaption>
+        </figure>
         <p>As noble as both of these organizations are, their usefulness in an emergency requires a person to be trained beforehand. <em>They are proactive, not reactive.</em> Until their impact becomes so widespread that it is common knowledge, there is an opportunity to create something to help people in the moment, during a crisis. </p>
-        <p>As a high school teacher, I used my classroom to explore the abilities and predispositions of my students and fellow faculty. There were limitations to what I was able to do, but I was still able to draw some significant conclusions. I found that the vast majority had cell phones, internet access, and would look up what to do online, but many of them did not know how to react in a crisis after calling 911. Additionally, a small group of students were asked to participate in a role-playing exercise where they needed to give first aid. While each of them dressed the wound, they were more concerned with cleaning it, rather than stopping the “bleeding”. <a href="doc/bvollner_researchPlan.pdf" alt="Research Plan">You can see the breakdown of these results in my research</a></p>
+        <p>These themes have been the focus of my work as a graduate student, and the research for this project was started in earlier semesters. As a high school teacher, I used my classroom to explore the abilities and predispositions of my students and fellow faculty. There were limitations to what I was able to do, but I was still able to draw some significant conclusions. I found that the vast majority had cell phones, internet access, and would look up what to do online, but many of them did not know how to react in a crisis after calling 911. Additionally, a small group of students were asked to participate in a role-playing exercise where they needed to give first aid. While each of them dressed the wound, they were more concerned with cleaning it, rather than stopping the “bleeding”. <a href="doc/bvollner_researchPlan.pdf" alt="Research Plan">You can see the breakdown of these results in my research</a></p>
         </div>
     </section>
 
     <section><div class="section_container">
         <h2>Finding the best answer to a terrible question</h2>
         <h3>Questions of Accessibility</h3>
-        <p>Just because the technology to create such a system is available does not mean that we all have equal access to it. Our own individual circumstances frame how we interact with technology and the world as a whole. In an emergency, there are different factors that should be considered to make sure that this resource can reach the widest possible demographic.</p>
+        <p>It seems that we have a real opportunity to impact these situations with smart phones, but just because the technology to create such a system is available does not mean that we all have equal access to it. Our own individual circumstances frame how we interact with technology and the world as a whole. In an emergency, there are different factors that should be considered to make sure that this resource can reach the widest possible demographic.</p>
         <ul>
             <li><h4>A Simple Color Scheme:</h4> The lack of distraction will allow the user to focus on the task at hand as much as possible. Contrasting colors will allow users with visual disabilities to more easily understand graphics and read text.</li>
             <li><h4>Clear, Concise Text:</h4> 130 million American adults lack a basic reading proficiency, reading at or less than a 6th grade level.<sup>8</sup> Somewhere between 5 and 15% of the American population (or between 14.5 and 43.5 million people) suffer from dyslexia.<sup>9</sup> Instructions should be written with simple language in a readable, ADA compliant typeface.</li>
@@ -71,6 +89,11 @@
         </div>
         </section>
 </div>
+</div>
+<div class="footer_container">
+<footer>
+    <p>BRIAN VOLLNER&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;MCAD CAPSTONE&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;SUMMER 2023</p>
+</footer>
 </div>
 </body>
 </html>
